# cellula-rs

./: .gitignore  Cargo.toml  README.md  benchmark.sh  compile.sh  environment.yml  perf.md  perf.toml
.github/workflows/: sync-model-template.yml
analyses/: Cargo.toml  adhesion_evolution.ipynb  cluster_speed.ipynb  contact_inhibition.ipynb  lead_follow.ipynb  msd.ipynb  pyproject.toml
analyses/analyses/: __init__.py  calculate_adh.py  io.py  parse.py  phylogeny.py
analyses/src/: contact.rs  lib.rs  neighbor.rs
benches/: ca_bench.rs  dish_bench.rs  env_bench.rs  io_bench.rs  lattice_bench.rs  main.rs  model_bench.rs
benches/model_files/: full_lattice.toml  large_lattice.toml
benchmark/: Cargo.toml  plot.py  results.json  results.md  run_bench.sh
benchmark/fixtures/: morpheus.xml
benchmark/src/: main.rs
cellulars/: Cargo.toml
cellulars-lib/: Cargo.toml
cellulars-lib/benches/: env_bench.rs
cellulars-lib/src/: adhesion.rs  base_cell.rs  basic_cell.rs  boundaries.rs  cell_container.rs  cellular.rs  constants.rs  empty_cell.rs  entity.rs  environment.rs  habitable.rs  lattice.rs  lattice_entity.rs  lib.rs  pond.rs  potts.rs  prelude.rs  space.rs  spatial.rs  spin.rs  static_adhesion.rs  step.rs  stepper.rs  symmetric_table.rs
cellulars-lib/src/base/: base_cell.rs  base_environment.rs  base_pond.rs  cell.rs  environment.rs  mod.rs  pond.rs
cellulars-lib/src/ecology/: disperser.rs  mod.rs  transporter.rs
cellulars-lib/src/evolution/: selector.rs
cellulars-lib/src/genetics/: genome.rs  mod.rs
cellulars-lib/src/io/: data.rs  data_writer.rs  file.rs  io_manager.rs  mod.rs  pad_file.rs  plot.rs  writer.rs
cellulars-lib/src/io/image/: lerper.rs  mod.rs  plot.rs  read_write.rs
cellulars-lib/src/io/read/: mod.rs  parquet_reader.rs  read.rs  reader.rs  trait.rs
cellulars-lib/src/io/write/: data_write.rs  mod.rs  parquet_writer.rs  write.rs  writer.rs
cellulars-lib/src/io/write/image/: image_write.rs  lerper.rs  mod.rs  movie_window.rs  plot.rs  webp_writer.rs
cellulars-lib/src/positional/: boundaries.rs  boundary.rs  com.rs  edge.rs  edge_book.rs  mod.rs  neighborhood.rs  neighbourhood.rs  pos.rs  rect.rs
cellulars-lib/src/traits/: adhesion_system.rs  cellular.rs  habitable.rs  mod.rs  potts_algorithm.rs  step.rs
cellulars-lib/tests/: io.rs
cellulars/benches/: env_bench.rs
cellulars/examples/: basic.rs  butterfly.rs  chem_pde.rs  collision.rs  division.rs  solid.rs
cellulars/src/: cell_container.rs  constants.rs  copy_bias.rs  empty_cell.rs  environment.rs  lattice.rs  lib.rs  potts.rs  prelude.rs  static_adhesion.rs  symmetric_table.rs
cellulars/src/base/: cell.rs  environment.rs  mod.rs  pond.rs
cellulars/src/io/read/: mod.rs  parquet_reader.rs
cellulars/src/io/write/: mod.rs  parquet_writer.rs  write_trait.rs
cellulars/src/io/write/image/: lerper.rs  mod.rs  plot.rs  webp_writer.rs
cellulars/src/positional/: boundaries.rs  com.rs  edge.rs  mod.rs  pos.rs  rect.rs
cellulars/src/traits/: adhesion_system.rs  cellular.rs  habitable.rs  mod.rs  potts_algorithm.rs  step.rs
cellulars/tests/: io.rs
config_files/: ci.toml  cil.toml  default.toml  display.toml  evo.toml  ji.toml  ji_pol.toml  msd.toml  speed.toml  test_season.toml
examples/: 1_cell.toml  64_cells.toml
git-hooks/: pre-commit
model/: Cargo.toml  build.rs
model/benches/: io_bench.rs  main.rs  model_bench.rs
model/benches/model_files/: full_lattice.toml  large_lattice.toml
model/examples/: 1_cell.toml  256_cells.toml  64_cells.toml
model/lib/: libkinect.dylib
model/src/: bit_adhesion.rs  cell.rs  cellular_automata.rs  chem_environment.rs  chem_potts.rs  chem_space.rs  chemotaxis_bias.rs  clonal_adhesion.rs  clonal_potts.rs  constants.rs  contact_potts.rs  environment.rs  kinect.rs  lib.rs  main.rs  model.rs  model_environment.rs  model_potts.rs  my_cell.rs  my_environment.rs  my_pond.rs  my_potts.rs  pond.rs  potts.rs  species_adhesion.rs
model/src/ecology/: disperser.rs  mod.rs  transporter.rs
model/src/evolution/: bit_genome.rs  disperser.rs  genome.rs  grn.rs  mod.rs  selector.rs  transporter.rs
model/src/genetics/: grn.rs  mod.rs
model/src/io/: io_manager.rs  kinect_listener.rs  mod.rs  movie_maker.rs  node_link.rs  parameters.rs  plot.rs  plots.rs
model/tests/: big_small_templates.parquet  io.rs  kinect.rs  mig_div_templates.parquet  model.rs
regulation_evolution2/: CMakeLists.txt  README.md  environment.yml
regulation_evolution2/data/: colortable.ctb  perf.par
regulation_evolution2/inc/: Bbox2.h  Color.h  CompPolygon.h  ConstraintGraph2.h  ConstraintSegment2.h  Edge2.h  FadeExport.h  Fade_2D.h  MeshGenParams.h  PShape.h  Point2.h  PolygonClipper.h  PolygonTree.h  Segment2.h  Triangle2.h  Vector2.h  VertexPair2.h  Visualizer2.h  VoroCell2.h  VtkWriter.h  Zone2.h  common.h  fadeVersion.h  freeFunctions.h  testDataGenerators.h
regulation_evolution2/scripts/: __init__.py  __main__.py  bittest.py  config.py  data_processing.py  fileio.py  hpc_template.sh  make_movie.sh  mutation.py  pca.py  plot_genome.py  plot_random_bitstrings.py  random_mut.py  replace_seed.sh  restart_run.sh  run.sh  run_ancestor.sh  run_competition.sh  run_hpc.sh  sweep.py
regulation_evolution2/src/: boundingbox.cpp  boundingbox.h  ca.cpp  ca.h  cell.cpp  cell.h  cell_evolution.cpp  conrec.cpp  dish.cpp  dish.h  engulfment.cpp  foodmanager.cpp  foodmanager.h  foodpatch.cpp  foodpatch.h  genome.cpp  genome.h  graph.h  intplane.h  misc.cpp  misc.h  mutation.cpp  output.cpp  output.h  parameter.cpp  parameter.h  parse.cpp  parse.h  pushing.cpp  random.cpp  random.h  sweep_genomes.cpp  sweep_genomes.h  voronoidiagram.cpp  voronoidiagram.h  warning.cpp  x11graph.cpp  x11graph.h
src/: adhesion.rs  boundary.rs  ca.rs  cell.rs  cell_container.rs  cellular_automata.rs  constants.rs  dish.rs  disperser.rs  edge.rs  environment.rs  genome.rs  io.rs  lattice.rs  lib.rs  main.rs  model.rs  moore.rs  neighbourhood.rs  parameters.rs  plotter.rs  pond.rs  pos.rs  selector.rs  space.rs  spin_table.rs  symmetric_table.rs  transporter.rs  utils.rs
src/ecology/: disperser.rs  mod.rs  (+2 more)
(+35 files in other folders)
