[package]
name = "evo-cpm"
version = "0.0.1"
edition = "2024"
description = "A fast, easily extensible evo-devo model."

[profile.release]
# These can drive up compilation time quite significantly,
# but they do have a measurable effect on performance
lto = "fat"
codegen-units = 1

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
config = "0.15.11"
env_logger = "0.11.8"
image = "0.25.6"
imageproc = "0.25.0"
indexmap = "2.9.0"
log = "0.4.27"
minifb = "0.28.0"
num = "0.4.3"
palette = "0.7.6"
petgraph-graphml = "5.0.0"
# This can be removed once we update polars
planus = "= 1.1.1"
polars = {  version = "0.50.0", features = ["lazy"] }
rand = "0.9.2"
rand_distr = "0.5.1"
rand_xoshiro = "0.7.0"
rustworkx-core = "0.17.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"
toml = "0.8.23"

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }

[[bench]]
name = "main"
harness = false

[[bench]]
name = "env_bench"
harness = false

[[bench]]
name = "model_bench"
harness = false

[[bench]]
name = "io_bench"
harness = false
