[workspace]
members = ["benchmark","cellulars", "model"]
resolver = "3"

# If changing there remember to also change model/Cargo.toml to update the template repo
[profile.fastest]
inherits = "release"
# These flags can drive up compilation time quite significantly,
# but they do have a measurable effect on performance
lto = "fat"
codegen-units = 1

[profile.fastest.package.cellulars]
codegen-units = 1
