[package]
name = "analyses"
version = "0.0.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust"
crate-type = ["cdylib"]

[features]
default = ["model"]
model = ["dep:model"]

[dependencies]
anyhow = "1.0.100"
cellulars-lib = { path = "../cellulars-lib" }
model = { path =  "../model", optional = true }
num = "0.4.3"
numpy = "0.26"
polars = "0.52.0"
pyo3 = "0.26.0"
pyo3-polars = "0.25.0"
