[package]
name = "cellulars-lib"
version = "0.0.1"
edition = "2024"
description = "Library supporting the cellulars package"

[[bench]]
name = "env_bench"
harness = false

[dependencies]
indexmap = "2.9.0"
log = "0.4.27"
num = "0.4.3"
rand = "0.9.2"
rustworkx-core = "0.17.1"
thiserror = "2.0.12"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
rand_xoshiro = "0.7.0"