[package]
name = "cellulars-lib"
version = "0.0.1"
edition = "2024"
description = "Library supporting the cellulars package"

[features]
default = ["high-precision"]
high-precision = []
image_io = []

[[bench]]
name = "env_bench"
harness = false

[dependencies]
image = { version = "0.25.9", default-features = false, features = ["webp", "rayon"] }
imageproc = { version = "0.26.0", default-features = false, features = ["fft", "rayon"] }
indexmap = "2.9.0"
log = "0.4.27"
num = "0.4.3"
palette = "0.7.6"
rand = "0.9.2"
thiserror = "2.0.12"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
rand_xoshiro = "0.7.0"
