[package]
name = "cellulars-lib"
version = "0.0.1"
edition = "2024"
description = "Library supporting the cellulars package"

[features]
default = ["f64", "log", "data-io", "image-io"]
f64 = []
image-io = ["parquet", "dep:image", "dep:imageproc", "dep:palette",]
data-io = ["serde", "parquet", "dep:serde_arrow"]
log = ["dep:log"]
serde = ["dep:serde"]
parquet = ["dep:parquet", "dep:arrow"]

[[bench]]
name = "env_bench"
harness = false

[dependencies]
arrow = { version = "57.2.0", default-features = false, features = [], optional = true }
image = { version = "0.25.9", default-features = false, features = ["webp", "rayon"], optional = true }
imageproc = { version = "0.26.0", default-features = false, features = ["fft", "rayon"], optional = true }
indexmap = "2.9.0"
log = { version =  "0.4.27", optional = true }
num = "0.4.3"
palette = { version = "0.7.6", default-features = false, features = ["std", "approx"], optional = true }
parquet = { version = "57.2.0", default-features = false, features = ["base64", "zstd", "arrow", "simdutf8"], optional = true }
rand = "0.9.2"
serde = { version = "1.0.228", optional = true }
serde_arrow = { version = "0.13.7", features = ["arrow-57"], optional = true }
thiserror = "2.0.12"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
rand_xoshiro = "0.7.0"
