[package]
name = "cellulars"
version = "0.1.6"
edition = "2024"
description = "A very fast, extensible CPM implementation."
license = "LGPL-3.0-only"
homepage = "https://github.com/aleferna12/cellula-rs"
repository = "https://github.com/aleferna12/cellula-rs"
documentation = "https://docs.rs/cellulars/latest/cellulars/"
readme = "../README.md"

[features]
default = ["f64", "log", "data-io", "image-io"]
f64 = []
movie-io = ["image-io", "minifb"]
image-io = ["dep:image", "dep:imageproc", "dep:palette"]
data-io = ["parquet", "serde", "dep:serde_arrow"]
log = ["dep:log"]
serde = ["dep:serde"]
parquet = ["dep:parquet", "dep:arrow"]
minifb = ["dep:minifb"]

[[example]]
name = "basic"
required-features = ["f64", "movie-io"]

[[example]]
name = "division"
required-features = ["f64", "movie-io"]

[[example]]
name = "chem_pde"
required-features = ["f64", "movie-io"]

[[bench]]
name = "env_bench"
harness = false

[dependencies]
arrow = { version = "58.0.0", default-features = false, features = [], optional = true }
image = { version = "0.25.9", default-features = false, features = ["webp", "rayon"], optional = true }
imageproc = { version = "0.26.1", default-features = false, features = ["fft", "rayon"], optional = true }
indexmap = "2.9.0"
log = { version =  "0.4.27", optional = true }
minifb = { version = "0.28.0", optional = true }
num = "0.4.3"
palette = { version = "0.7.6", default-features = false, features = ["std", "approx"], optional = true }
parquet = { version = "58.0.0", default-features = false, features = ["base64", "zstd", "arrow", "simdutf8"], optional = true }
rand = "0.10.0"
serde = { version = "1.0.228", optional = true }
serde_arrow = { version = "0.14.0", features = ["arrow-58"], optional = true }
thiserror = "2.0.12"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
rand_xoshiro = "0.8.0"
