[package]
name = "cellulars"
version = "0.1.12"
edition = "2024"
description = "A very fast, extensible CPM implementation."
license = "LGPL-3.0-only"
homepage = "https://github.com/aleferna12/cellula-rs"
repository = "https://github.com/aleferna12/cellula-rs"
documentation = "https://docs.rs/cellulars/latest/cellulars/"
readme = "../README.md"

[features]
default = ["f64", "log", "data-io", "image-io"]
f64 = []
movie-io = ["image-io", "minifb"]
image-io = ["dep:image", "dep:imageproc", "dep:palette"]
data-io = ["parquet", "serde", "dep:serde_arrow"]
log = ["dep:log"]
serde = ["dep:serde"]
parquet = ["dep:parquet", "dep:arrow"]
minifb = ["dep:minifb"]

[[example]]
name = "basic"
required-features = ["f64", "movie-io"]

[[example]]
name = "division"
required-features = ["f64", "movie-io"]

[[example]]
name = "chem_pde"
required-features = ["f64", "movie-io"]

[[bench]]
name = "env_bench"
harness = false

[dependencies]
indexmap = "^2.9"
num = "^0.4"
rand = "^0.10"
thiserror = "^2.0"
arrow = { version = "^58.0", default-features = false, features = [], optional = true }
image = { version = "^0.25", default-features = false, features = ["webp", "rayon"], optional = true }
imageproc = { version = "^0.26", default-features = false, features = ["fft", "rayon"], optional = true }
log = { version =  "^0.4", optional = true }
minifb = { version = "^0.28", optional = true }
palette = { version = "^0.7", default-features = false, features = ["std", "approx"], optional = true }
parquet = { version = "^58.0", default-features = false, features = ["base64", "zstd", "arrow", "simdutf8"], optional = true }
serde = { version = "^1.0", optional = true }
serde_arrow = { version = "^0.14", features = ["arrow-58"], optional = true }

[dev-dependencies]
criterion = { version = "^0.8", features = ["html_reports"] }
rand_xoshiro = "^0.8"
