[package]
name = "model"
version = "0.0.1"
edition = "2024"
description = "A very fast, extensible CPM implementation."

[features]
fixed_boundary = []

[[bench]]
name = "main"
harness = false

[[bench]]
name = "model_bench"
harness = false

[[bench]]
name = "io_bench"
harness = false

[dependencies]
cellulars-lib = { path = "../cellulars-lib" }
anyhow = "1.0.99"
bon = "3.7.2"
clap = { version = "4.5.39", features = ["derive"] }
config = "0.15.11"
env_logger = "0.11.8"
image = "0.25.6"
imageproc = "0.25.0"
log = "0.4.27"
minifb = "0.28.0"
palette = "0.7.6"
polars = {  version = "0.51.0", features = ["lazy", "parquet"] }
rand = "0.9.2"
rand_distr = { version = "0.5.1", features = ["serde"] }
rand_xoshiro = "0.7.0"
rustworkx-core = "0.17.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"
toml = "0.8.23"
num-traits = "0.2.19"

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }
