[package]
name = "model"
version = "0.0.1"
edition = "2024"
description = "A very fast, extensible CPM implementation."
build = "build.rs"

[features]
default = ["movie"]
high-precision = ["cellulars-lib/high-precision"]
movie = ["dep:minifb"]
fixed-boundary = []
von-neumann = []

[[bench]]
name = "main"
harness = false

[[bench]]
name = "model_bench"
harness = false

[[bench]]
name = "io_bench"
harness = false

[dependencies]
cellulars-lib = { path = "../cellulars-lib", default-features = false }
anyhow = "1.0.99"
bon = "3.7.2"
clap = { version = "4.5.39", features = ["derive"] }
config = "0.15.11"
env_logger = "0.11.8"
image = "0.25.6"
imageproc = "0.25.0"
log = "0.4.27"
minifb = { version = "0.28.0", optional = true }
palette = "0.7.6"
polars = {  version = "0.52.0", features = ["lazy", "parquet", "timezones"] }
rand = "0.9.2"
rand_xoshiro = "0.7.0"
serde = { version = "1.0.219", features = ["derive"] }
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"
toml = "0.9.8"
num-traits = "0.2.19"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
