[package]
name = "model"
version = "0.0.1"
edition = "2024"
description = "A very fast, extensible CPM implementation."

[features]
default = ["high-precision", "movie-io"]
high-precision = ["cellulars-lib/f64"]
movie-io = ["cellulars-lib/movie-io"]
fixed-boundary = []
von-neumann = []

[[bench]]
name = "main"
harness = false

[[bench]]
name = "model_bench"
harness = false

[[bench]]
name = "io_bench"
harness = false

[dependencies]
cellulars-lib = { path = "../cellulars-lib", default-features = false, features = ["data-io", "image-io"] }
anyhow = "1.0.99"
bon = "3.7.2"
clap = { version = "4.5.39", features = ["derive"] }
config = "0.15.11"
env_logger = "0.11.8"
image = "0.25.6"
log = "0.4.27"
rand = "0.10.0"
rand_xoshiro = "0.8.0"
serde = { version = "1.0.219", features = ["derive"] }
strum = "0.27.1"
strum_macros = "0.27.1"
toml = "0.9.8"
num-traits = "0.2.19"
imageproc = "0.26.0"
palette = "0.7.6"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
